--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,14 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
-</ion-content>
+
+  <div class="flex-container2">
+
+    <div class="logoContainer"> 
+      <div class="logo"></div>
+      <img src="../../assets/imgs/" alt="">
+    </div>
+ 
+
+<div class="butt">
+  <button class="btn" (click)="checkScore()" ion-button full>CheckScore</button>
+</div>
+  </div>
